stach, still json parsing problem when doing upload
