# swagger_server/controllers/parser_controller.py
@@ -2,6 +2,7 @@ import connexion
 import six
 
 from swagger_server.models.inline_response201 import InlineResponse201  # noqa: E501
+from swagger_server.models.parser_format import ParserFormat  # noqa: E501
 from swagger_server import util
 
 
@@ -17,7 +18,7 @@ def read_coverage(project_id, commit_id, coverage_id):  # noqa: E501
     :param coverage_id: pass coverage id to get it
     :type coverage_id: str
 
-    :rtype: object
+    :rtype: ParserFormat
     """
     return 'do some magic!'
 
@@ -36,6 +37,7 @@ def write_coverage(project_id, commit_id, body=None):  # noqa: E501
 
     :rtype: InlineResponse201
     """
+    print("here")
     if connexion.request.is_json:
-        body = object.from_dict(connexion.request.get_json())  # noqa: E501
+        body = ParserFormat.from_dict(connexion.request.get_json())  # noqa: E501
     return 'do some magic!'
