# swagger_server/models/__init__.py
@@ -3,7 +3,11 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from swagger_server.models.class_type import ClassType
 from swagger_server.models.commit_type import CommitType
 from swagger_server.models.inline_response201 import InlineResponse201
-from swagger_server.models.lines_type import LinesType
+from swagger_server.models.line_type import LineType
+from swagger_server.models.package_type import PackageType
+from swagger_server.models.parser_format import ParserFormat
 from swagger_server.models.project_type import ProjectType
+from swagger_server.models.sources_type import SourcesType
