# swagger_server/models/class_type.py
@@ -1,0 +1,227 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server.models.line_type import LineType  # noqa: F401,E501
+from swagger_server import util
+
+
+class ClassType(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, path: str=None, name: str=None, complexity: int=None, line_rate: int=None, branch_rate: int=None, methods: List[object]=None, lines: List[LineType]=None):  # noqa: E501
+        """ClassType - a model defined in Swagger
+
+        :param path: The path of this ClassType.  # noqa: E501
+        :type path: str
+        :param name: The name of this ClassType.  # noqa: E501
+        :type name: str
+        :param complexity: The complexity of this ClassType.  # noqa: E501
+        :type complexity: int
+        :param line_rate: The line_rate of this ClassType.  # noqa: E501
+        :type line_rate: int
+        :param branch_rate: The branch_rate of this ClassType.  # noqa: E501
+        :type branch_rate: int
+        :param methods: The methods of this ClassType.  # noqa: E501
+        :type methods: List[object]
+        :param lines: The lines of this ClassType.  # noqa: E501
+        :type lines: List[LineType]
+        """
+        self.swagger_types = {
+            'path': str,
+            'name': str,
+            'complexity': int,
+            'line_rate': int,
+            'branch_rate': int,
+            'methods': List[object],
+            'lines': List[LineType]
+        }
+
+        self.attribute_map = {
+            'path': 'path',
+            'name': 'name',
+            'complexity': 'complexity',
+            'line_rate': 'line-rate',
+            'branch_rate': 'branch-rate',
+            'methods': 'methods',
+            'lines': 'lines'
+        }
+        self._path = path
+        self._name = name
+        self._complexity = complexity
+        self._line_rate = line_rate
+        self._branch_rate = branch_rate
+        self._methods = methods
+        self._lines = lines
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'ClassType':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The ClassType of this ClassType.  # noqa: E501
+        :rtype: ClassType
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def path(self) -> str:
+        """Gets the path of this ClassType.
+
+
+        :return: The path of this ClassType.
+        :rtype: str
+        """
+        return self._path
+
+    @path.setter
+    def path(self, path: str):
+        """Sets the path of this ClassType.
+
+
+        :param path: The path of this ClassType.
+        :type path: str
+        """
+        if path is None:
+            raise ValueError("Invalid value for `path`, must not be `None`")  # noqa: E501
+
+        self._path = path
+
+    @property
+    def name(self) -> str:
+        """Gets the name of this ClassType.
+
+
+        :return: The name of this ClassType.
+        :rtype: str
+        """
+        return self._name
+
+    @name.setter
+    def name(self, name: str):
+        """Sets the name of this ClassType.
+
+
+        :param name: The name of this ClassType.
+        :type name: str
+        """
+        if name is None:
+            raise ValueError("Invalid value for `name`, must not be `None`")  # noqa: E501
+
+        self._name = name
+
+    @property
+    def complexity(self) -> int:
+        """Gets the complexity of this ClassType.
+
+
+        :return: The complexity of this ClassType.
+        :rtype: int
+        """
+        return self._complexity
+
+    @complexity.setter
+    def complexity(self, complexity: int):
+        """Sets the complexity of this ClassType.
+
+
+        :param complexity: The complexity of this ClassType.
+        :type complexity: int
+        """
+
+        self._complexity = complexity
+
+    @property
+    def line_rate(self) -> int:
+        """Gets the line_rate of this ClassType.
+
+
+        :return: The line_rate of this ClassType.
+        :rtype: int
+        """
+        return self._line_rate
+
+    @line_rate.setter
+    def line_rate(self, line_rate: int):
+        """Sets the line_rate of this ClassType.
+
+
+        :param line_rate: The line_rate of this ClassType.
+        :type line_rate: int
+        """
+
+        self._line_rate = line_rate
+
+    @property
+    def branch_rate(self) -> int:
+        """Gets the branch_rate of this ClassType.
+
+
+        :return: The branch_rate of this ClassType.
+        :rtype: int
+        """
+        return self._branch_rate
+
+    @branch_rate.setter
+    def branch_rate(self, branch_rate: int):
+        """Sets the branch_rate of this ClassType.
+
+
+        :param branch_rate: The branch_rate of this ClassType.
+        :type branch_rate: int
+        """
+
+        self._branch_rate = branch_rate
+
+    @property
+    def methods(self) -> List[object]:
+        """Gets the methods of this ClassType.
+
+
+        :return: The methods of this ClassType.
+        :rtype: List[object]
+        """
+        return self._methods
+
+    @methods.setter
+    def methods(self, methods: List[object]):
+        """Sets the methods of this ClassType.
+
+
+        :param methods: The methods of this ClassType.
+        :type methods: List[object]
+        """
+        if methods is None:
+            raise ValueError("Invalid value for `methods`, must not be `None`")  # noqa: E501
+
+        self._methods = methods
+
+    @property
+    def lines(self) -> List[LineType]:
+        """Gets the lines of this ClassType.
+
+
+        :return: The lines of this ClassType.
+        :rtype: List[LineType]
+        """
+        return self._lines
+
+    @lines.setter
+    def lines(self, lines: List[LineType]):
+        """Sets the lines of this ClassType.
+
+
+        :param lines: The lines of this ClassType.
+        :type lines: List[LineType]
+        """
+        if lines is None:
+            raise ValueError("Invalid value for `lines`, must not be `None`")  # noqa: E501
+
+        self._lines = lines
