# swagger_server/models/sources_type.py
@@ -1,0 +1,64 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class SourcesType(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, path: str=None):  # noqa: E501
+        """SourcesType - a model defined in Swagger
+
+        :param path: The path of this SourcesType.  # noqa: E501
+        :type path: str
+        """
+        self.swagger_types = {
+            'path': str
+        }
+
+        self.attribute_map = {
+            'path': 'path'
+        }
+        self._path = path
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'SourcesType':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The SourcesType of this SourcesType.  # noqa: E501
+        :rtype: SourcesType
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def path(self) -> str:
+        """Gets the path of this SourcesType.
+
+
+        :return: The path of this SourcesType.
+        :rtype: str
+        """
+        return self._path
+
+    @path.setter
+    def path(self, path: str):
+        """Sets the path of this SourcesType.
+
+
+        :param path: The path of this SourcesType.
+        :type path: str
+        """
+        if path is None:
+            raise ValueError("Invalid value for `path`, must not be `None`")  # noqa: E501
+
+        self._path = path
